--- a/DeviceBooker/Views/Shared/_Layout.cshtml
+++ b/DeviceBooker/Views/Shared/_Layout.cshtml
@@ -31,6 +31,7 @@
                         <li>@Html.ActionLink("Laitteet", "DeviceGroupList", "Home")</li>
                         <li>@Html.ActionLink("Etsi", "Contact", "Api")</li>
                         <li>@Html.ActionLink("Omat varaukset", "UserRes", "Api")</li>
+                        <li>@Html.ActionLink("Luo laiteryhmä", "CreateGroup", "Admin")</li>
                     </ul>
             </div>
         </div>
