--- a/DeviceBooker/Views/Home/DeviceList.cshtml
+++ b/DeviceBooker/Views/Home/DeviceList.cshtml
@@ -29,6 +29,6 @@
     @Scripts.Render("~/Scripts/App/DeviceFunctions.js")
 
 <script type="text/javascript">
-    window.DeviceList.Init();
+    window.DeviceList.Init(@ViewBag.groupid);
 </script>
 }
