--- a/DeviceBooker/Views/Shared/_Layout.cshtml
+++ b/DeviceBooker/Views/Shared/_Layout.cshtml
@@ -32,6 +32,7 @@
                         <li>@Html.ActionLink("Etsi", "Contact", "Api")</li>
                         <li>@Html.ActionLink("Omat varaukset", "UserRes", "Api")</li>
                         <li>@Html.ActionLink("Luo laiteryhmä", "CreateGroup", "Admin")</li>
+                        <li>@Html.ActionLink("Lisää laite ryhmään", "CreateDevice", "Admin")</li>
                     </ul>
             </div>
         </div>
