--- a/DeviceBooker/Views/Home/DeviceGroupList.cshtml
+++ b/DeviceBooker/Views/Home/DeviceGroupList.cshtml
@@ -7,14 +7,14 @@
 </div>
 
 <div class="row">
-    <div class="col-xs-6">
+    <div class="col-xs-12 col-s-6 col-md-6">
         <table id="deviceGroupListTable" class="table table-condensed table-striped">
             <thead>
-                <tr>
-                    <th data-sort="string">Nimi<span class="pull-right"><i style="color: #ddd;" class="glyphicon glyphicon-sort sortArrow"></i></span></th>
-                </tr>
+                
                 <tr id="deviceGroupListItemTemplate" class="hidden">
-                    <td class="name"></td>
+                    <td>
+                        <a class="btn btn-xs btn-default col-xs-12 text-center DeviceListBtn" href="#" style="height: 35px; padding-top: 3px; font-size: 20px; background-color: #f5f5f5";></a>
+                    </td>
                 </tr>
             </thead>
             <tbody id="deviceGroupList"></tbody>
