--- a/DeviceBooker/Views/Shared/_Layout.cshtml
+++ b/DeviceBooker/Views/Shared/_Layout.cshtml
@@ -8,6 +8,7 @@
     @Scripts.Render("~/bundles/modernizr")
     @Scripts.Render("~/bundles/jquery")
     @Scripts.Render("~/Scripts/App/ApiHelper.js")
+    @Scripts.Render("~/Scripts/App/Models.js")
     @Scripts.Render("~/Scripts/App/Common.js")
 
     <script type="text/javascript">
