--- a/DeviceBooker/Views/Home/Calendar.cshtml
+++ b/DeviceBooker/Views/Home/Calendar.cshtml
@@ -7,7 +7,7 @@
 @Styles.RenderFormat(@"<link href=""~/Content/fullcalendar.print.css""
                              rel=""stylesheet""
                              media=""print"" />",
-                      "~/Content/css"),
+                      "~/Content/css")
 @Scripts.Render("~/Scripts/lib/moment.min.js")
 @Scripts.Render("~/Scripts/fullcalendar.js")
 @Scripts.Render("~/Scripts/CalendarScript.js")
