--- a/DeviceBooker/Views/Admin/CreateDevice.cshtml
+++ b/DeviceBooker/Views/Admin/CreateDevice.cshtml
@@ -1,31 +1,32 @@
 ﻿@{
-    ViewBag.Title = "Ryhmän lisäys";
+    ViewBag.Title = "Laitteen lisäys";
 }
 
 <div class="container" style="padding-top: 30px";>
     <div class="row">
         <div class="col-xs-10">
             <div class="col-xs-2">
-                <label for="groupNameedit">Ryhmän numero</label>
+                <label for="GroupIdEdit">Valitse ryhmä</label>
             </div>
             <div class="col-xs-8">
-                    <input type="text" class="form-control" name="groupNameEdit" id="groupNameEdit" />
+                <select class="selectpicker form-control" id="deviceGroupList"></select>
             </div>
+            
        </div>
     </div>
     <div class="row">
         <div class="col-xs-10">
             <div class="col-xs-2">
-                <label for="groupNameedit">Laitteen tunniste</label>
+                <label for="DeviceNameEdit">Laitteen tunniste</label>
             </div>
             <div class="col-xs-8">
-                <input type="text" class="form-control" name="groupNameEdit" id="groupNameEdit" />
+                <input type="text" class="form-control" name="DeviceNameEdit" id="DeviceNameEdit" />
             </div>
         </div>
     </div>
     <div class="row">
         <div class="col-xs-2 pull-right">  
-            <button id="createGroupBtn" type="button" class="btn btn-success disabled"><i class="glyphicon glyphicon-floppy-disk"></i></button>
+            <button id="createDeviceBtn" type="button" class="btn btn-success"><i class="glyphicon glyphicon-floppy-disk"></i></button>
         </div>
         
     </div>
@@ -34,10 +35,10 @@
 @section Footer {
     @Scripts.Render("~/Scripts/App/Models.js")
 
-    @Scripts.Render("~/Scripts/App/CreateGroup.js")
+    @Scripts.Render("~/Scripts/App/CreateDevice.js")
     @Scripts.Render("~/Scripts/App/DeviceFunctions.js")
 
     <script type="text/javascript">
-    window.CreateGroup.Init();
+    window.CreateDevice.Init();
     </script>
 }
