--- a/DeviceBooker/Views/Home/Calendar.cshtml
+++ b/DeviceBooker/Views/Home/Calendar.cshtml
@@ -3,17 +3,20 @@
 }
 
 @Styles.Render("~/Content/fullcalendar.css")
-
-@Styles.RenderFormat(@"<link href=""~/Content/fullcalendar.print.css""
-                             rel=""stylesheet""
-                             media=""print"" />",
-                      "~/Content/css")
+@Styles.RenderFormat(@"<link href=""~/Content/fullcalendar.print.css"" rel=""stylesheet"" media=""print"" />","~Content/css")
 @Scripts.Render("~/Scripts/lib/moment.min.js")
 @Scripts.Render("~/Scripts/fullcalendar.js")
-@Scripts.Render("~/Scripts/CalendarScript.js")
 
 <div class="row">
     <div class="col-md-6"><h2>Kalenteri</h2></div>
 </div>
 
 <div id='calendar'></div>
+
+@section Footer {
+@Scripts.Render("~/Scripts/App/Models.js")
+@Scripts.Render("~/Scripts/CalendarScript.js")
+<script type="text/javascript">
+    window.CalendarScript.Init();
+</script>
+    }
