--- a/DeviceBooker/Views/Admin/CreateDevice.cshtml
+++ b/DeviceBooker/Views/Admin/CreateDevice.cshtml
@@ -9,7 +9,7 @@
                 <label for="GroupIdEdit">Valitse ryhmä</label>
             </div>
             <div class="col-xs-8">
-                <select class="selectpicker form-control" id="deviceGroupList"></select>
+                <select class="selectpicker form-control input-sm" id="deviceGroupList"></select>
             </div>
             
        </div>
@@ -19,8 +19,18 @@
             <div class="col-xs-2">
                 <label for="DeviceNameEdit">Laitteen tunniste</label>
             </div>
+            <div class="col-xs-8 c">
+                <input type="text" class="form-control input-sm" name="DeviceNameEdit" id="DeviceNameEdit" />
+            </div>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-xs-10">
+            <div class="col-xs-2">
+                <label for="DeviceDescriptionEdit">Laitteen kuvaus</label>
+            </div>
             <div class="col-xs-8">
-                <input type="text" class="form-control" name="DeviceNameEdit" id="DeviceNameEdit" />
+                <textarea type="text" class="form-control input-sm" rows="4" name="DeviceDescriptionEdit" id="DeviceDescriptionEdit" ></textarea>
             </div>
         </div>
     </div>
