--- a/DeviceBooker/Views/Home/DeviceList.cshtml
+++ b/DeviceBooker/Views/Home/DeviceList.cshtml
@@ -10,14 +10,21 @@
     <div class="col-xs-6">
         <table id="deviceListTable" class="table table-condensed table-striped">
             <thead>
-                <tr>
-                    <th data-sort="string">Nimi<span class="pull-right"><i style="color: #ddd;" class="glyphicon glyphicon-sort sortArrow"></i></span></th>
-                </tr>
-                <tr id="deviceListItemTemplate" class="hidden">
-                    <td class="name"></td>
-                </tr>
+               <tr>
+                   <th data-sort="string">Nimi</th>
+                   <th data-sort="string">Kuvaus</th>
+               </tr>
+
+
+
+               <tr id="deviceListItemTemplate" class="hidden">
+                   <td class="name"></td>
+                   <td class="description"></td>
+               </tr>
             </thead>
-            <tbody id="deviceList"></tbody>
+            <tbody id="deviceList">
+
+            </tbody>
         </table>
     </div>
 </div>
