--- a/DeviceBooker/Views/Shared/_Layout.cshtml
+++ b/DeviceBooker/Views/Shared/_Layout.cshtml
@@ -34,7 +34,7 @@
                         <li>@Html.ActionLink("Omat varaukset", "UserRes", "Api", null, new { style = "color: white" })</li>
                         <li>@Html.ActionLink("Luo laiteryhmä", "CreateGroup", "Admin", null, new { style = "color: white" })</li>
                         <li>@Html.ActionLink("Lisää laite ryhmään", "CreateDevice", "Admin", null, new { style = "color: white" })</li>
-                        <li>@Html.ActionLink("Kalenteri", "Calendar", "Home", null, new { style = "color: white" })</li>
+                        <li>@Html.ActionLink("Admin", "Admin", "Admin", null, new { style = "color: white" })</li>
                     </ul>
             </div>
         </div>
