--- a/DeviceBooker/Views/Shared/_Layout.cshtml
+++ b/DeviceBooker/Views/Shared/_Layout.cshtml
@@ -11,10 +11,6 @@
     @Scripts.Render("~/Scripts/App/Models.js")
     @Scripts.Render("~/Scripts/App/Common.js")
 
-    <script type="text/javascript">
-        var APIBaseUrl = /Api/;
-    </script>
-
 </head>
 <body>
     <div class="navbar navbar-inverse navbar-fixed-top text-white" style="background-color: #f44292;">
@@ -30,8 +26,7 @@
             <div class="navbar-collapse collapse pull-right">
                     <ul class="nav navbar-nav">             
                         <li>@Html.ActionLink("Laitteet", "DeviceGroupList", "Home", null, new { style = "color: white" })</li>
-                        <li>@Html.ActionLink("Etsi", "Contact", "Api", null, new { style = "color: white" })</li>
-                        <li>@Html.ActionLink("Omat varaukset", "UserRes", "Api", null, new { style = "color: white" })</li>
+                        <li>@Html.ActionLink("Omat varaukset", "OwnCalendar", "Home", null, new { style = "color: white" })</li>
                         <li>@Html.ActionLink("Luo laiteryhmä", "CreateGroup", "Admin", null, new { style = "color: white" })</li>
                         <li>@Html.ActionLink("Lisää laite ryhmään", "CreateDevice", "Admin", null, new { style = "color: white" })</li>
                         <li>@Html.ActionLink("Admin", "Admin", "Admin", null, new { style = "color: white" })</li>
