--- a/DeviceBooker/Views/Home/Calendar.cshtml
+++ b/DeviceBooker/Views/Home/Calendar.cshtml
@@ -13,6 +13,25 @@
 
 <div id='calendar'></div>
 
+<div id="ReservationModal" class="modal fade" role="dialog">
+    <div class="modal-dialog">
+
+        <div class="modal-content">
+            <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal">&times;</button>
+                <h4 class="modal-title">Tämä teksti korvautuu jQueryssä:</h4>
+            </div>
+            <div class="modal-body">
+                <p>Tähän inputit</p>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-default" data-dismiss="modal">Sulje</button>
+            </div>
+        </div>
+
+    </div>
+</div>
+
 @section Footer {
     @Scripts.Render("~/Scripts/App/Models.js")
     @Scripts.Render("~/Scripts/CalendarScript.js")
